--- a/fiddler.html
+++ b/fiddler.html
@@ -69,6 +69,9 @@ less = {
             </div>
         </div>
         <div class="ui-layout-west">
+            <form class="fiddler-method-search-form">
+                <p><input placeholder="Filter methods"/></p>
+            </form>
             <div class="fiddler-content fiddler-method-index"></div>
         </div>
         <div class="ui-layout-center">
